# nanojson

./: Cargo.toml  LICENCE  README.md
.github/workflows/: ci.yml
nanojson/: Cargo.toml
nanojson-derive/: Cargo.toml
nanojson-derive/src/: codegen.rs  helpers.rs  lib.rs  parse_item.rs
nanojson/examples/: big.rs  derive.rs  manual.rs  medium.rs  nostd.rs  recursive.rs  sensor_log.rs  simple.rs
nanojson/src/: deserialize.rs  error.rs  lib.rs  serialize.rs  tests.rs  write.rs
nanojson/tests/: derive_roundtrip.rs  non_derive.rs  readme.rs  string_escaping.rs
