[package]
name = "nanojson-derive"
version = "0.2.0"
edition = "2021"
description = "Derive macros (Serialize, Deserialize) for the nanojson crate."
license = "MIT"
repository = "https://github.com/rGradeup/nanojson"
keywords = ["json", "no_std", "derive", "proc-macro", "embedded"]
categories = ["development-tools::procedural-macros"]

[lib]
proc-macro = true

[dependencies]
