[package]
name = "nanojson-derive"
version = "0.4.0"
edition = "2021"
description = "Derive macros (Serialize, Deserialize) for the nanojson crate."
license = "MIT"
repository = "https://github.com/rGradeup/nanojson"
keywords = ["json", "no_std", "derive", "proc-macro", "embedded"]
categories = ["encoding", "embedded", "no-std", "parsing"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
